kubernetes/manifests/iep2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iep2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iep2
  template:
    metadata:
      labels:
        app: iep2
    spec:
      containers:
      - name: iep2
        image: rib13/lock-in-iep2:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: iep2
spec:
  selector:
    app: iep2
  ports:
  - port: 5004
    targetPort: 5004
  type: ClusterIP
