kubernetes/manifests/iep3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iep3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iep3
  template:
    metadata:
      labels:
        app: iep3
    spec:
      containers:
      - name: iep3
        image: rib13/lock-in-iep3:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: iep3
spec:
  selector:
    app: iep3
  ports:
  - port: 5003
    targetPort: 5003
  type: ClusterIP
