kubernetes/manifests/iep4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iep4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iep4
  template:
    metadata:
      labels:
        app: iep4
    spec:
      containers:
      - name: iep4
        image: rib13/lock-in-iep4:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: iep4
spec:
  selector:
    app: iep4
  ports:
  - port: 5005
    targetPort: 5005
  type: ClusterIP
