kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lock-in-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 5002
      - path: /api/eep1
        pathType: Prefix
        backend:
          service:
            name: eep1
            port:
              number: 5000
